--- a/app/src/main/res/layout/activity_userprofile.xml
+++ b/app/src/main/res/layout/activity_userprofile.xml
@@ -3,5 +3,82 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.UserprofileActivity">
+    tools:context=".Activity.UserprofileActivity"
+    android:orientation="vertical"
+    android:background="@drawable/splash">
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/logo"
+        android:layout_gravity="center"
+        android:layout_margin="15dp"/>
+
+    <TextView
+        android:id="@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+    <TextView
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="20dp"
+        android:orientation="vertical"
+        android:background="@drawable/userprofilebackground"
+        android:layout_margin="20dp">
+
+        <TextView
+            android:id="@+id/editprofile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edit Profile"
+            android:textSize="30dp"
+            android:layout_margin="5dp"/>
+
+        <TextView
+            android:id="@+id/logbook"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Log Book"
+            android:textSize="30dp"
+            android:layout_margin="5dp"/>
+
+        <TextView
+            android:id="@+id/graph"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Graph"
+            android:textSize="30dp"
+            android:layout_margin="5dp"/>
+
+        <TextView
+            android:id="@+id/aboutus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="About Us"
+            android:textSize="30dp"
+            android:layout_margin="5dp"/>
+
+        <TextView
+            android:id="@+id/feedback"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Feedback"
+            android:textSize="30dp"
+            android:layout_margin="5dp"/>
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@drawable/loginbuttondesign"
+            android:text="Logout"/>
+
+    </LinearLayout>
 </LinearLayout>
